kano-settings (4.0.5-0) unstable; urgency=low

  * Changes for Kano OS 3.15.0:
  * Fixed long delay when going into the Notifications menu
  * Disabled hdmi_drive config option when going into Safe Mode
  * Add splash animation for Settings app
  * Fixed the Wi-Fi refresh screen on connection failure

 -- Team Kano <dev@kano.me>  Tue, 19 Dec 2017 18:28:00 +0100

kano-settings (4.0.4-1) unstable; urgency=low

  * Changes for Kano OS 3.14.1:
  * Disabled hdmi_drive config option when going into Safe Mode
  * Make safe mode use the preferred mode of the screen

 -- Team Kano <dev@kano.me>  Mon, 8 Jan 2018 12:19:00 +0100

kano-settings (4.0.4-0) unstable; urgency=low

  * Changes for Kano OS 3.14.0:
  * Reduced execution time of kano-safeboot-mode reducing time to boot by ~3.5s
  * Migrated parental whitelist over to use the master branch
  * Added CKC speaker claim page to whitelist
  * Removed duplication of configuring /etc/hosts for Hack Minecraft
  * Added sentinel file on /boot partition to use custom config.txt settings
  * Write /boot/cpuid.txt
  * Ensure that the LightDM configuration exists on boot and regenerate if needed
  * Add kano zendesk to the parental control whitelist.

 -- Team Kano <dev@kano.me>  Tue, 5 Dec 2017 17:22:00 +0100

kano-settings (4.0.3-0) unstable; urgency=low

  * Changes for Kano OS 3.13.0:
  * Migrate Busybox dhcp client to a more modern implementation
  * Added Volume Boost option in Settings > Audio for CKCv1
  * Ensured volume levels at bootup for CKCv1 only
  * Included full screen model EDID in Settings > Display
  * Removed unused kano_screen_used config comment
  * Added edid-tools for dumping and flashing EDIDs
  * Added check for wireless passphrase lenght in GUI connect app

 -- Team Kano <dev@kano.me>  Thu, 12 Oct 2017 14:27:15 +0100

kano-settings (4.0.2-0) unstable; urgency=low

  * Changes for Kano OS 3.12.0:
  * Ensuring maximum volume level on CKC and other