@@ -1,3 +1,6 @@
+# Test files
+reports
+
 
 # Created by https://www.gitignore.io/api/vim,macos,emacs,python,sublimetext,visualstudiocode
 
