@@ -1,0 +1,3 @@
+[pytest]
+markers =
+    gtk: mark a test as requiring Gtk installed.
